No more fork, too slow